# forum

./: README.md  compose.yaml
backend/auth/: .env  Dockerfile  alembic.ini  pyproject.toml
backend/auth/alembic/: env.py
backend/auth/alembic/versions/: bf6eda1fbd92_initial.py
backend/auth/src/forum_application.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/auth/src/forum_auth/domain/models/: __init__.py  user.py  user_roles.py  user_session.py  user_settings.py
backend/auth/src/forum_auth/infrastructure/: config.py  database.py  dto.py  model.py  observer.py  period.py  relational_entity.py  repo.py  value_object.py
backend/auth/src/forum_auth/main/: api.py
backend/auth/src/forum_auth/presentation/admin/: __init__.py  auth_backend.py  user.py  user_session.py
backend/auth/src/forum_auth/presentation/api/: __init__.py
backend/auth/src/forum_auth/presentation/api/handlers/: authentication.py  user.py
backend/auth/src/forum_auth/presentation/api/schemas/: schemas.py  tags_metadata.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  Home.jsx  QuestionsList.jsx  ToasterCustom.jsx  main.jsx
frontend/src/components/: AuthenticationModal.jsx  Modal.css  QuestionCreatingPage.jsx  QuestionPage.css  QuestionPage.jsx  RegistrationModal.jsx
frontend/src/footer/: Footer.css  Footer.jsx
frontend/src/header/: Header.css  Header.jsx
frontend/src/styles/: App.css  QuestionsList.css  index.css
nginx/: nginx.conf
